--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
           <version>2.4.6</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/net.liftweb/lift-json -->
+      <dependency>
+          <groupId>net.liftweb</groupId>
+          <artifactId>lift-json_2.11</artifactId>
+          <version>3.0.2</version>
+      </dependency>
+
+
       <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
